tests/invalid/array_bound.lang
int lista[3]; 
lista[3] = 50; // Erro! Índice 3 está fora.